my-material-tab-changes

--- a/src/app/features/indent/single-indent-details/single-indent-details.component.html
+++ b/src/app/features/indent/single-indent-details/single-indent-details.component.html
@@ -17,7 +17,7 @@
     <div class="row" *ngIf="singleIndentDetails">
       <!-- <div class="col-sm-12"> -->
       <!-- table structure -->
-      <table mat-table [dataSource]="singleIndentDetails" class="mat-elevation-z8 col-sm-12">
+      <table mat-table [dataSource]="singleIndentDetails" class="mat-elevation-z8 col-sm-12 indent-table">
         <!--- Note that these columns can be defined in any order.
                   The actual rendered columns are set as a property on the row definition" -->
 
