--- a/src/app/features/indent/indent-detail/indent-detail.component.html
+++ b/src/app/features/indent/indent-detail/indent-detail.component.html
@@ -5,84 +5,76 @@
         <card-layout *ngIf="product" (onEdit)="editProject()" (onDelete)="deleteProject()" [projectDetails]="product" [disableEditDelete]="true"></card-layout>
       </div>
     </div>
-    <!-- <div class="row p-t-10">
-      <div class="col-sm-12">
-        <mat-toolbar>
-          <span>Ongoing Indent</span>
-        </mat-toolbar>
-      </div>
-    </div> -->
-    <!-- first table structure -->
 
-      <ng-container class="user-dts">
-        <mat-expansion-panel class="myPanel" [expanded]="true">
-          <mat-expansion-panel-header [collapsedHeight]="'48px'" [expandedHeight]="'48px'">
-            <div class="row ">
-              <div class="col-sm-12">
-                <span>Ongoing Indent</span>
-              </div>
+    <ng-container class="user-dts">
+      <mat-expansion-panel class="myPanel" [expanded]="true">
+        <mat-expansion-panel-header [collapsedHeight]="'48px'" [expandedHeight]="'48px'">
+          <div class="row">
+            <div class="col-sm-12">
+              <span>Ongoing Indent</span>
             </div>
-          </mat-expansion-panel-header>
-          <div class="row padding-8 ongoing-indent-tbl">
-            <!-- <div class="col-sm-12"> -->
-            <!-- table structure -->
-            <table mat-table [dataSource]="dataSource1" class="mat-elevation-z8 col-sm-12">
-              <!--- Note that these columns can be defined in any order.
+          </div>
+        </mat-expansion-panel-header>
+        <div class="row padding-8 ongoing-indent-tbl">
+          <!-- <div class="col-sm-12"> -->
+          <!-- table structure -->
+          <table mat-table [dataSource]="dataSource1" class="mat-elevation-z8 col-sm-12">
+            <!--- Note that these columns can be defined in any order.
                       The actual rendered columns are set as a property on the row definition" -->
 
-              <!-- Position Column -->
-              <ng-container matColumnDef="Indent Number">
-                <th mat-header-cell *matHeaderCellDef>Indent Number</th>
-                <td mat-cell *matCellDef="let element">{{ element.indentId }}</td>
-              </ng-container>
+            <!-- Position Column -->
+            <ng-container matColumnDef="Indent Number">
+              <th mat-header-cell *matHeaderCellDef>Indent Number</th>
+              <td mat-cell *matCellDef="let element">{{ element.indentId }}</td>
+            </ng-container>
 
-              <!-- Name Column -->
-              <ng-container matColumnDef="Indented Date">
-                <th mat-header-cell *matHeaderCellDef>Indented Date</th>
-                <td mat-cell *matCellDef="let element">
-                  {{ element.createdAt | date: "dd-MMM-yyy" }}
-                </td>
-              </ng-container>
+            <!-- Name Column -->
+            <ng-container matColumnDef="Indented Date">
+              <th mat-header-cell *matHeaderCellDef>Indented Date</th>
+              <td mat-cell *matCellDef="let element">
+                {{ element.createdAt | date: "dd-MMM-yyy" }}
+              </td>
+            </ng-container>
 
-              <!-- Weight Column -->
-              <ng-container matColumnDef="Total No Of Material">
-                <th mat-header-cell *matHeaderCellDef class="text-align-center">Total No Of Material</th>
-                <td mat-cell *matCellDef="let element" class="text-align-center">
-                  {{ element.materialCount }}
-                </td>
-              </ng-container>
+            <!-- Weight Column -->
+            <ng-container matColumnDef="Total No Of Material">
+              <th mat-header-cell *matHeaderCellDef class="text-align-center">Total No Of Material</th>
+              <td mat-cell *matCellDef="let element" class="text-align-center">
+                {{ element.materialCount }}
+              </td>
+            </ng-container>
 
-              <!-- Symbol Column -->
-              <ng-container matColumnDef="Created By">
-                <th mat-header-cell *matHeaderCellDef>Created By</th>
-                <td mat-cell *matCellDef="let element">
-                  {{ element.createdBy }}
-                </td>
-              </ng-container>
+            <!-- Symbol Column -->
+            <ng-container matColumnDef="Created By">
+              <th mat-header-cell *matHeaderCellDef>Created By</th>
+              <td mat-cell *matCellDef="let element">
+                {{ element.createdBy }}
+              </td>
+            </ng-container>
 
-              <ng-container matColumnDef="View Indent">
-                <th mat-header-cell *matHeaderCellDef></th>
-                <td mat-cell *matCellDef="let element">
-                  <a (click)="viewIndentDetails(element)" class="cursor" style="color: #f47721">View Indent</a>
-                </td>
-              </ng-container>
+            <ng-container matColumnDef="View Indent">
+              <th mat-header-cell *matHeaderCellDef></th>
+              <td mat-cell *matCellDef="let element">
+                <a (click)="viewIndentDetails(element)" class="cursor" style="color: #f47721;">View Indent</a>
+              </td>
+            </ng-container>
 
-              <!-- <ng-container matColumnDef="Date">
+            <!-- <ng-container matColumnDef="Date">
                 <th mat-header-cell *matHeaderCellDef>Date</th>
                 <td mat-cell *matCellDef="let element">
                   {{ element.createdAt | date }}
                 </td>
               </ng-container> -->
 
-              <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-              <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-            </table>
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+          </table>
 
-            <!-- end structure -->
-            <!-- </div> -->
-          </div>
-    </mat-expansion-panel>
-      </ng-container>
+          <!-- end structure -->
+          <!-- </div> -->
+        </div>
+      </mat-expansion-panel>
+    </ng-container>
 
     <!-- <div class="row p-t-10">
       <div class="col-sm-12">
@@ -91,78 +83,78 @@
         </mat-toolbar>
       </div>
     </div> -->
-<p></p>
-      <ng-container  class="user-dts">
-        <mat-expansion-panel class="myPanel" [expanded]="true">
-          <mat-expansion-panel-header [collapsedHeight]="'48px'" [expandedHeight]="'48px'">
-            <div class="row ">
-              <div class="col-sm-12">
-                 <span>Completed Indent</span>
-              </div>
+    <p></p>
+    <ng-container class="user-dts">
+      <mat-expansion-panel class="myPanel" [expanded]="true">
+        <mat-expansion-panel-header [collapsedHeight]="'48px'" [expandedHeight]="'48px'">
+          <div class="row">
+            <div class="col-sm-12">
+              <span>Completed Indent</span>
             </div>
-          </mat-expansion-panel-header>
-            <!-- first table structure -->
-            <div class="row padding-8 completed-indent-tbl">
-              <!-- <div class="col-sm-12"> -->
-              <!-- table structure -->
-              <table mat-table [dataSource]="dataSource2" class="mat-elevation-z8 col-sm-12">
-                <!--- Note that these columns can be defined in any order.
+          </div>
+        </mat-expansion-panel-header>
+        <!-- first table structure -->
+        <div class="row padding-8 completed-indent-tbl">
+          <!-- <div class="col-sm-12"> -->
+          <!-- table structure -->
+          <table mat-table [dataSource]="dataSource2" class="mat-elevation-z8 col-sm-12">
+            <!--- Note that these columns can be defined in any order.
                           The actual rendered columns are set as a property on the row definition" -->
 
-                <!-- Position Column -->
-                <ng-container matColumnDef="Indent Number">
-                  <th mat-header-cell *matHeaderCellDef>Indent Number</th>
-                  <td mat-cell *matCellDef="let element">{{ element.indentId }}</td>
-                </ng-container>
+            <!-- Position Column -->
+            <ng-container matColumnDef="Indent Number">
+              <th mat-header-cell *matHeaderCellDef>Indent Number</th>
+              <td mat-cell *matCellDef="let element">{{ element.indentId }}</td>
+            </ng-container>
 
-                <!-- Name Column -->
-                <ng-container matColumnDef="Indented Date">
-                  <th mat-header-cell *matHeaderCellDef>Indented Date</th>
-                  <td mat-cell *matCellDef="let element">
-                    {{ element.createdAt | date: "dd-MMM-yyy" }}
-                  </td>
-                </ng-container>
+            <!-- Name Column -->
+            <ng-container matColumnDef="Indented Date">
+              <th mat-header-cell *matHeaderCellDef>Indented Date</th>
+              <td mat-cell *matCellDef="let element">
+                {{ element.createdAt | date: "dd-MMM-yyy" }}
+              </td>
+            </ng-container>
 
-                <!-- Weight Column -->
-                <ng-container matColumnDef="Total No Of Material">
-                  <th mat-header-cell *matHeaderCellDef class="text-align-center">Total No Of Material</th>
-                  <td mat-cell *matCellDef="let element" class="text-align-center">
-                    {{ element.materialCount }}
-                  </td>
-                </ng-container>
+            <!-- Weight Column -->
+            <ng-container matColumnDef="Total No Of Material">
+              <th mat-header-cell *matHeaderCellDef class="text-align-center">Total No Of Material</th>
+              <td mat-cell *matCellDef="let element" class="text-align-center">
+                {{ element.materialCount }}
+              </td>
+            </ng-container>
 
-                <!-- Symbol Column -->
-                <ng-container matColumnDef="Created By">
-                  <th mat-header-cell *matHeaderCellDef>Created By</th>
-                  <td mat-cell *matCellDef="let element">
-                    {{ element.createdBy }}
-                  </td>
-                </ng-container>
+            <!-- Symbol Column -->
+            <ng-container matColumnDef="Created By">
+              <th mat-header-cell *matHeaderCellDef>Created By</th>
+              <td mat-cell *matCellDef="let element">
+                {{ element.createdBy }}
+              </td>
+            </ng-container>
 
-                <ng-container matColumnDef="View Indent">
-                  <th mat-header-cell *matHeaderCellDef></th>
-                  <td mat-cell *matCellDef="let element">
-                    <a (click)="viewIndentDetails(element)" class="cursor" style="color: #f47721">View Indent</a>
-                  </td>
-                </ng-container>
+            <ng-container matColumnDef="View Indent">
+              <th mat-header-cell *matHeaderCellDef></th>
+              <td mat-cell *matCellDef="let element">
+                <a (click)="viewIndentDetails(element)" class="cursor" style="color: #f47721;">View Indent</a>
+              </td>
+            </ng-container>
 
-                <!-- <ng-container matColumnDef="Date">
+            <!-- <ng-container matColumnDef="Date">
                   <th mat-header-cell *matHeaderCellDef>Date</th>
                   <td mat-cell *matCellDef="let element">
                     {{ element.createdAt | date }}
                   </td>
                 </ng-container> -->
 
-                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-                <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-                <!-- (click)="viewIndentDetails(row)"  -->
-              </table>
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+            <!-- (click)="viewIndentDetails(row)"  -->
+          </table>
 
-              <!-- end structure -->
-              <!-- </div> -->
-            </div>
-            <!-- end of first structure -->
-     </mat-expansion-panel>
-      </ng-container>
+          <!-- end structure -->
+          <!-- </div> -->
+        </div>
+        <!-- end of first structure -->
+      </mat-expansion-panel>
+    </ng-container>
   </div>
 </div>
