--- a/src/app/shared/dialogs/add-my-material-Bom/add-my-material-bom.component.html
+++ b/src/app/shared/dialogs/add-my-material-Bom/add-my-material-bom.component.html
@@ -70,8 +70,8 @@
                 <mat-label>Category*</mat-label>
                 <mat-select formControlName="category">
                   <div class="display-flex">
-                    <input class="p-l-10 p-b-5" matInput type="search" placeholder="Search Category" [(ngModel)]="searchCategory" [ngModelOptions]="{standalone: true}" />
-                    <button mat-button matSuffix mat-icon-button>
+                    <input class="p-l-10 p-b-5" matInput type="text" placeholder="Search Category" [ngModel]="searchCategory" [ngModelOptions]="{standalone: true}" />
+                    <button mat-button mat-icon-button>
                       <mat-icon>search</mat-icon>
                     </button>
                   </div>
