--- a/src/assets/scss/pages/indent.scss
+++ b/src/assets/scss/pages/indent.scss
@@ -1,9 +1,17 @@
 .completed-indent-tbl,
-.ongoing-indent-tbl{
-    .mat-header-cell, .mat-cell{
-        font-size: 14px;
-        &:not(:first-child){
-            text-align: center;
-        }
+.ongoing-indent-tbl {
+  .mat-header-cell,
+  .mat-cell {
+    font-size: 14px;
+    &:not(:first-child) {
+      text-align: center;
     }
+  }
+}
+
+.indent-table {
+  .mat-column-materialName {
+    width: 10% !important;
+    max-width: 264px;
+  }
 }
