my-material-tab-changes

--- a/src/assets/scss/pages/indent.scss
+++ b/src/assets/scss/pages/indent.scss
@@ -10,8 +10,10 @@
 }
 
 .indent-table {
-  .mat-column-materialName {
+  .mat-column-Material-Name {
     width: 10% !important;
     max-width: 264px;
+    overflow: hidden;
+    text-overflow: ellipsis;
   }
 }
