--- a/src/app/features/indent/single-indent-details/single-indent-details.component.html
+++ b/src/app/features/indent/single-indent-details/single-indent-details.component.html
@@ -29,14 +29,14 @@
 
         <!-- REquested Quantity Column -->
         <ng-container matColumnDef="Requested Quantity">
-          <th mat-header-cell *matHeaderCellDef>Requested Quantity</th>
-          <td mat-cell *matCellDef="let element">{{ element.requestedQuantity }} {{ element.materialUnit }}</td>
+          <th mat-header-cell *matHeaderCellDef class="p-l-20">Requested Quantity</th>
+          <td mat-cell *matCellDef="let element" class="p-l-20">{{ element.requestedQuantity }} {{ element.materialUnit }}</td>
         </ng-container>
 
         <!-- Issued Quantity Column -->
         <ng-container matColumnDef="Issued Quantity">
           <th mat-header-cell *matHeaderCellDef>Issued Quantity</th>
-          <td mat-cell *matCellDef="let element">{{ element.issuedQty }} {{ element.materialUnit }}</td>
+          <td mat-cell *matCellDef="let element" class="p-l-20">{{ element.issuedQty }} {{ element.materialUnit }}</td>
         </ng-container>
 
         <!-- Requested Date3 Column -->
