--- a/src/app/features/po/add-grn/add-grn.component.html
+++ b/src/app/features/po/add-grn/add-grn.component.html
@@ -1,85 +1,84 @@
 <div class="page-start-point">
-    <div class="p-l-20 p-r-20 p-b-20 min-height parent">
-        <div class="row p-t-20 p-b-20">
-            <div class="col-xs-6">PO Name: 5672829</div>
-            <div class="col-xs-6">
-                <div class="pull-right p-l-10 p-r-10">
-                    <button (click)="addGrn()" mat-raised-button class="main-background-color color-white main-button ">
-                        Save
-                    </button>
-                </div>
-                <div class="pull-right p-l-10 p-r-10">
-                    <button (click)="goBack()" mat-raised-button class="background-white-color main-color main-button ">
-                        Back
-                    </button>
-                </div>
+  <div class="p-l-20 p-r-20 p-b-20 min-height parent">
+    <div class="row p-t-20 p-b-20">
+      <div class="col-xs-6">PO Name: 5672829</div>
+      <div class="col-xs-6">
+        <div class="pull-right p-l-10 p-r-10">
+          <button (click)="addGrn()" mat-raised-button class="main-background-color color-white main-button">
+            Save
+          </button>
+        </div>
+        <div class="pull-right p-l-10 p-r-10">
+          <button (click)="goBack()" mat-raised-button class="background-white-color main-color main-button">
+            Back
+          </button>
+        </div>
 
-                <div class="main-color pull-right p-l-10 p-r-10">
-
-                    <a>Attach Checklist</a>
-                </div>
-                <div class="pull-right p-l-10 p-r-10">
-
-                    <!-- <mat-form-field class="border-input">
+        <div class="main-color pull-right p-l-10 p-r-10">
+          <a>Attach Checklist</a>
+        </div>
+        <div class="pull-right p-l-10 p-r-10">
+          <!-- <mat-form-field class="border-input">
                         <input matInput [matDatepicker]="dueDate" placeholder="02-02-2020" formControlName="dueDate" />
                         <mat-datepicker-toggle matSuffix [for]="dueDate"></mat-datepicker-toggle>
                         <mat-datepicker #dueDate startView="month" [startAt]="dueDate"></mat-datepicker>
                     </mat-form-field> -->
-
-                </div>
-            </div>
         </div>
-
-        <!-- *ngIf="grnDetails" -->
-        <div class="row">
-            <div class="col-sm-12">
-                <form *ngIf="dataSource" [formGroup]="materialForms">
-                        <div formArrayName="forms" class="row">
-
-                    <table mat-table [dataSource]="dataSource" class="col-sm-12">
-                        <ng-container matColumnDef="Material Name">
-                            <th mat-header-cell *matHeaderCellDef>Material Name</th>
-                            <td mat-cell *matCellDef="let element">{{ element.materialName }}</td>
-                        </ng-container>
-
-                         <ng-container matColumnDef="Brand Name">
-                            <th mat-header-cell *matHeaderCellDef>Brand Name</th>
-                            <td mat-cell *matCellDef="let element">{{ element.materialBrand }}</td>
-                        </ng-container>
-
-                        <ng-container matColumnDef="Awarded Quantity">
-                            <th mat-header-cell *matHeaderCellDef class="text-align-center">Awarded Quantity</th>
-                            <td mat-cell *matCellDef="let element" class="text-align-center">
-                                {{ element.materialQuantity }}
-                            </td>
-                        </ng-container>
-
-                        <ng-container matColumnDef="Delivered Quantity">
-                            <th mat-header-cell *matHeaderCellDef class="text-align-center">Delivered Quantity</th>
-                            <td mat-cell *matCellDef="let element" class="text-align-center">
-                                {{ element.deliveredQty }}
-                            </td>
-                        </ng-container>
-
-                        <ng-container matColumnDef="Received Quantity">
-                            <th mat-header-cell *matHeaderCellDef>Received Quantity</th>
-                            <td mat-cell *matCellDef="let element;let i = index" class="border-input">
-                                <!-- <input matInput type="number" placeholder="Quantity"> -->
-
-                            <mat-form-field [formGroupName]="i" class="border-input table-input">
-                                    <input matInput formControlName="certifiedQty" type="text"  appTwoDigitDecimaNumber placeholder="Required Quantity" min="0"  />
-                                </mat-form-field>
-                                <!-- {{ element.certifiedQuantity }} -->
-                            </td>
-                        </ng-container>
-
-                        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-                        <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-                    </table>
-                        
-                        </div>
-                </form>
-            </div>
-        </div>
+      </div>
     </div>
+
+    <!-- *ngIf="grnDetails" -->
+    <div class="row">
+      <div class="col-sm-12">
+        <form *ngIf="dataSource" [formGroup]="materialForms">
+          <div formArrayName="forms" class="row">
+            <table mat-table [dataSource]="dataSource" class="col-sm-12">
+              <ng-container matColumnDef="Material Name">
+                <th mat-header-cell *matHeaderCellDef>Material Name</th>
+                <td mat-cell *matCellDef="let element">
+                  <div class="limited-character universal">
+                    {{ element.materialName }}
+                  </div>
+                </td>
+              </ng-container>
+
+              <ng-container matColumnDef="Brand Name">
+                <th mat-header-cell *matHeaderCellDef>Brand Name</th>
+                <td mat-cell *matCellDef="let element">{{ element.materialBrand }}</td>
+              </ng-container>
+
+              <ng-container matColumnDef="Awarded Quantity">
+                <th mat-header-cell *matHeaderCellDef class="text-align-center">Awarded Quantity</th>
+                <td mat-cell *matCellDef="let element" class="text-align-center">
+                  {{ element.materialQuantity }}
+                </td>
+              </ng-container>
+
+              <ng-container matColumnDef="Delivered Quantity">
+                <th mat-header-cell *matHeaderCellDef class="text-align-center">Delivered Quantity</th>
+                <td mat-cell *matCellDef="let element" class="text-align-center">
+                  {{ element.deliveredQty }}
+                </td>
+              </ng-container>
+
+              <ng-container matColumnDef="Received Quantity">
+                <th mat-header-cell *matHeaderCellDef>Received Quantity</th>
+                <td mat-cell *matCellDef="let element; let i = index" class="border-input">
+                  <!-- <input matInput type="number" placeholder="Quantity"> -->
+
+                  <mat-form-field [formGroupName]="i" class="border-input table-input">
+                    <input matInput formControlName="certifiedQty" type="text" appTwoDigitDecimaNumber placeholder="Required Quantity" min="0" />
+                  </mat-form-field>
+                  <!-- {{ element.certifiedQuantity }} -->
+                </td>
+              </ng-container>
+
+              <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+              <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+            </table>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
 </div>
