--- a/src/app/features/po/view-grn/view-grn.component.html
+++ b/src/app/features/po/view-grn/view-grn.component.html
@@ -1,10 +1,13 @@
 <div class="page-start-point">
   <div class="p-b-20 grn-dashboard min-height parent">
-    <div class="row p-t-20 ">
+    <div class="row p-t-20">
       <!-- <div class="col-xs-6">PO Number: {{grnHeaders[0].poNumber}}</div> -->
-      <div class="col-xs-6 text-semi-bold po-number-grn">PO Number: <span *ngIf="poData && poData.poNumber">
-        {{ poData.poNumber }}
-      </span></div>
+      <div class="col-xs-6 text-semi-bold po-number-grn">
+        PO Number:
+        <span *ngIf="poData && poData.poNumber">
+          {{ poData.poNumber }}
+        </span>
+      </div>
       <div class="col-xs-6">
         <button (click)="viewBack()" mat-raised-button class="background-white-color main-color main-button back-btn-grn pull-right">
           Back
@@ -16,20 +19,19 @@
       </div>
     </div>
 
- 
-      <div *ngIf="grnHeaders">
-        <ng-container *ngFor="let grnHeader of grnHeaders">
-          <br>
-             <mat-accordion>
-                <mat-expansion-panel class="myPanel" [expanded]="true">
-                  <mat-expansion-panel-header>
-                    <mat-panel-title>
-                      <div class="row width100Percent">
-                        <div class="col-xs-6 col-md-4">GRN - {{ grnHeader.grnId }}</div>
-                        <div class="col-xs-6 col-md-4">
-                          {{ grnHeader.grnDate | date: "dd-MMM-yyy" }}
-                        </div>
-                        <!-- <div class="col-md-4">
+    <div *ngIf="grnHeaders">
+      <ng-container *ngFor="let grnHeader of grnHeaders">
+        <br />
+        <mat-accordion>
+          <mat-expansion-panel class="myPanel" [expanded]="true">
+            <mat-expansion-panel-header>
+              <mat-panel-title>
+                <div class="row width100Percent">
+                  <div class="col-xs-6 col-md-4">GRN - {{ grnHeader.grnId }}</div>
+                  <div class="col-xs-6 col-md-4">
+                    {{ grnHeader.grnDate | date: "dd-MMM-yyy" }}
+                  </div>
+                  <!-- <div class="col-md-4">
                                             <div class="pull-right p-l-10 p-r-10">
                                                 <mat-icon>cloud_download</mat-icon>
                                             </div>
@@ -42,36 +44,36 @@
                                                 <mat-icon>descriptions</mat-icon>
                                             </div>
                                         </div> -->
-                      </div>
-                    </mat-panel-title>
-                  </mat-expansion-panel-header>
-                  <div class="add-grn-container mat-elevation-z8">
-                    <table mat-table [dataSource]="getData(grnHeader.poMaterialList)">
-                      <ng-container matColumnDef="Material Name">
-                        <th mat-header-cell *matHeaderCellDef>Material Name</th>
-                        <td mat-cell *matCellDef="let element" class="grn-material-name">{{ element.materialName }}</td>
-                      </ng-container>
+                </div>
+              </mat-panel-title>
+            </mat-expansion-panel-header>
+            <div class="add-grn-container mat-elevation-z8">
+              <table mat-table [dataSource]="getData(grnHeader.poMaterialList)">
+                <ng-container matColumnDef="Material Name">
+                  <th mat-header-cell *matHeaderCellDef>Material Name</th>
+                  <td mat-cell *matCellDef="let element" class="grn-material-name">
+                    <div class="limited-character global">
+                      {{ element.materialName }}
+                    </div>
+                  </td>
+                </ng-container>
 
-                      <ng-container matColumnDef="Brand Name">
-                        <th mat-header-cell *matHeaderCellDef>Brand Name</th>
-                        <td mat-cell *matCellDef="let element" class="brand-name">{{ element.materialBrand }}</td>
-                      </ng-container>
+                <ng-container matColumnDef="Brand Name">
+                  <th mat-header-cell *matHeaderCellDef>Brand Name</th>
+                  <td mat-cell *matCellDef="let element" class="brand-name">{{ element.materialBrand }}</td>
+                </ng-container>
 
-                      <ng-container matColumnDef="Awarded Quantity">
-                        <th mat-header-cell *matHeaderCellDef class="text-align-center">Awarded Quantity</th>
-                        <td mat-cell *matCellDef="let element" class="text-align-center">
-                          {{ element.materialQuantity }}  {{ element.materialUnit }}
-                        </td>
-                      </ng-container>
+                <ng-container matColumnDef="Awarded Quantity">
+                  <th mat-header-cell *matHeaderCellDef class="text-align-center">Awarded Quantity</th>
+                  <td mat-cell *matCellDef="let element" class="text-align-center">{{ element.materialQuantity }} {{ element.materialUnit }}</td>
+                </ng-container>
 
-                      <ng-container matColumnDef="Delivered Quantity">
-                        <th mat-header-cell *matHeaderCellDef class="text-align-center">Delivered Quantity</th>
-                        <td mat-cell *matCellDef="let element" class="text-align-center">
-                          {{ element.deliveredQty }}  {{ element.materialUnit }}
-                        </td>
-                      </ng-container>
+                <ng-container matColumnDef="Delivered Quantity">
+                  <th mat-header-cell *matHeaderCellDef class="text-align-center">Delivered Quantity</th>
+                  <td mat-cell *matCellDef="let element" class="text-align-center">{{ element.deliveredQty }} {{ element.materialUnit }}</td>
+                </ng-container>
 
-                      <!-- <ng-container matColumnDef="Date">
+                <!-- <ng-container matColumnDef="Date">
                                     <ng-container matColumnDef="Received Quantity">
                                         <th mat-header-cell *matHeaderCellDef class="text-align-center">Received Quantity</th>
                                         <td mat-cell *matCellDef="let element" class="text-align-center">
@@ -86,14 +88,13 @@
                                         </td>
                                     </ng-container> -->
 
-                      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-                      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-                    </table>
-                  </div>
-                </mat-expansion-panel>
-             </mat-accordion>
-        </ng-container>
-      </div>
-
+                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+              </table>
+            </div>
+          </mat-expansion-panel>
+        </mat-accordion>
+      </ng-container>
+    </div>
   </div>
 </div>
