--- a/src/app/shared/dialogs/add-edit-grn/add-edit-grn-component.html
+++ b/src/app/shared/dialogs/add-edit-grn/add-edit-grn-component.html
@@ -11,128 +11,105 @@
   </div>
 </div>
 
-
 <form *ngIf="materialForms" [formGroup]="materialForms" (ngSubmit)="addGrn()">
+  <div *ngIf="showtable" formArrayName="forms" class="add-grn-container-popup mat-elevation-z8 form-add-edit-grn-div">
+    <table mat-table [dataSource]="dataSource">
+      <ng-container matColumnDef="Material Name">
+        <th mat-header-cell *matHeaderCellDef>Material Name</th>
+        <td mat-cell *matCellDef="let element" class="grn-material-name">
+          <div class="limited-character global">
+            {{ element.materialName }}
+          </div>
+        </td>
+      </ng-container>
 
-      <div *ngIf="showtable" formArrayName="forms" class="add-grn-container-popup mat-elevation-z8 form-add-edit-grn-div">
-        <table mat-table [dataSource]="dataSource">
-          <ng-container matColumnDef="Material Name">
-            <th mat-header-cell *matHeaderCellDef>Material Name</th>
-            <td mat-cell *matCellDef="let element" class="grn-material-name">
-              <div class="limited-character global">
-                {{ element.materialName }}
+      <ng-container matColumnDef="Brand Name">
+        <th mat-header-cell *matHeaderCellDef>Brand Name</th>
+        <td mat-cell *matCellDef="let element">{{ element.materialBrand }}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="Unit">
+        <th mat-header-cell *matHeaderCellDef class="text-align-center">Unit</th>
+        <td mat-cell *matCellDef="let element" class="text-align-center">
+          <span *ngIf="element.materialUnit != ''">
+            {{ element.materialUnit }}
+          </span>
+          <span *ngIf="element.materialUnit == ''">
+            -
+          </span>
+        </td>
+      </ng-container>
+
+      <ng-container matColumnDef="Awarded Quantity">
+        <th mat-header-cell *matHeaderCellDef class="text-align-center">Awarded Quantity</th>
+        <td mat-cell *matCellDef="let element" class="text-align-center">
+          {{ element.materialQuantity }}
+        </td>
+      </ng-container>
+
+      <ng-container matColumnDef="Delivered Quantity">
+        <th mat-header-cell *matHeaderCellDef class="text-align-center">Delivered Quantity</th>
+        <td mat-cell *matCellDef="let element" class="text-align-center">
+          {{ element.deliveredQty }}
+        </td>
+      </ng-container>
+
+      <ng-container matColumnDef="Received Quantity">
+        <th mat-header-cell *matHeaderCellDef>Received Quantity</th>
+        <td mat-cell *matCellDef="let element;let i = index" class="border-input">
+          <!-- <input matInput type="number" placeholder="Quantity"> -->
+
+          <mat-form-field [formGroupName]="i" class="border-input table-input">
+            <input matInput formControlName="certifiedQty" type="text" placeholder="Received Quantity" min="0" appTwoDigitDecimaNumber />
+          </mat-form-field>
+          <!-- {{ element.certifiedQuantity }} -->
+        </td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+    </table>
+  </div>
+
+  <div *ngIf="!showtable" formArrayName="forms" class="add-grn-responsive-div">
+    <ng-container *ngFor="let data of dataSource; let i=index">
+      <mat-accordion class="add-edit-grn-popup-accordian">
+        <mat-expansion-panel class="myPanel" [expanded]="true">
+          <mat-expansion-panel-header>
+            <mat-panel-title>
+              <div class="row width100Percent">
+                <div class="col-xs-8 col-md-8 p-t-10 p-b-10 font-size-vary-grn">
+                  {{data.materialName}}
+                  <div class="font-size-vary-grn color-brand">
+                    {{data.materialBrand}}
+                  </div>
+                </div>
+                <div class="col-xs-4 col-md-4">
+                  <mat-form-field [formGroupName]="i" class="border-input table-input add-grn-popup">
+                    <input matInput formControlName="certifiedQty" type="text" placeholder="Received Quantity" min="0" appTwoDigitDecimaNumber />
+                  </mat-form-field>
+                </div>
               </div>
-            </td>
-          </ng-container>
-
-          <ng-container matColumnDef="Brand Name">
-            <th mat-header-cell *matHeaderCellDef>Brand Name</th>
-            <td mat-cell *matCellDef="let element">{{ element.materialBrand }}</td>
-          </ng-container>
-
-          <ng-container matColumnDef="Unit">
-            <th mat-header-cell *matHeaderCellDef class="text-align-center">Unit</th>
-            <td mat-cell *matCellDef="let element" class="text-align-center">
-              <span *ngIf="element.materialUnit != ''">
-                {{ element.materialUnit }}
-              </span>
-              <span *ngIf="element.materialUnit == ''">
-                -
-              </span>
-            </td>
-          </ng-container>
-
-          <ng-container matColumnDef="Awarded Quantity">
-            <th mat-header-cell *matHeaderCellDef class="text-align-center">Awarded Quantity</th>
-            <td mat-cell *matCellDef="let element" class="text-align-center">
-              {{ element.materialQuantity }}
-            </td>
-          </ng-container>
-
-          <ng-container matColumnDef="Delivered Quantity">
-            <th mat-header-cell *matHeaderCellDef class="text-align-center">Delivered Quantity</th>
-            <td mat-cell *matCellDef="let element" class="text-align-center">
-              {{ element.deliveredQty }}
-            </td>
-          </ng-container>
-
-          <ng-container matColumnDef="Received Quantity">
-            <th mat-header-cell *matHeaderCellDef>Received Quantity</th>
-            <td mat-cell *matCellDef="let element;let i = index" class="border-input">
-              <!-- <input matInput type="number" placeholder="Quantity"> -->
-
-              <mat-form-field [formGroupName]="i" class="border-input table-input">
-                <input
-                  matInput
-                  formControlName="certifiedQty"
-                  type="text"
-                  placeholder="Received Quantity"
-                  min="0"
-                  appTwoDigitDecimaNumber
-                />
-              </mat-form-field>
-              <!-- {{ element.certifiedQuantity }} -->
-            </td>
-          </ng-container>
-
-          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-          <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-        </table>
-      </div>
-
-      <div *ngIf="!showtable" formArrayName="forms" class="add-grn-responsive-div">
-        <ng-container *ngFor="let data of dataSource; let i=index">
-             <mat-accordion class="add-edit-grn-popup-accordian">
-                <mat-expansion-panel class="myPanel" [expanded]="true">
-                  <mat-expansion-panel-header>
-                    <mat-panel-title>
-                      <div class="row width100Percent">
-                        <div class="col-xs-8 col-md-8 p-t-10 p-b-10 font-size-vary-grn">
-                          {{data.materialName}}  
-                          <div class="font-size-vary-grn color-brand">
-                              {{data.materialBrand}} 
-                          </div>
-                          </div>
-                        <div class="col-xs-4 col-md-4">
-                           <mat-form-field [formGroupName]="i" class="border-input table-input add-grn-popup">
-                                <input
-                                  matInput
-                                  formControlName="certifiedQty"
-                                  type="text"
-                                  placeholder="Received Quantity"
-                                  min="0"
-                                  appTwoDigitDecimaNumber
-                                />
-                              </mat-form-field>
-                        </div>
-                      </div>
-                      </mat-panel-title>
-                            
-                  </mat-expansion-panel-header>
-                    <div class="row width100Percent">
-                        <div class="col-xs-12 font-size-vary-grn p-t-10 p-l-15">
-                           Unit : {{data.materialUnit}}
-                          </div>
-                    </div>
-                      <div class="row width100Percent">
-                   
-                         <div class="col-xs-6 font-size-vary-grn p-t-10 p-b-10 p-l-15">
-                          Awarded Quantity : {{data.materialQuantity}}
-                          </div>
-                          <div class="col-xs-6 font-size-vary-grn text-align-right p-t-10 p-b-10">
-                            Delivered Quantity : {{data.deliveredQty}}
-                          </div>
-                      
-                      </div>
-
-                </mat-expansion-panel>
-             </mat-accordion>
-             <div class="p-1"></div>
-        </ng-container>
-         
-      </div>
-
-   
+            </mat-panel-title>
+          </mat-expansion-panel-header>
+          <div class="row width100Percent">
+            <div class="col-xs-12 font-size-vary-grn p-t-10 p-l-15">
+              Unit : {{data.materialUnit}}
+            </div>
+          </div>
+          <div class="row width100Percent">
+            <div class="col-xs-6 font-size-vary-grn p-t-10 p-b-10 p-l-15">
+              Awarded Quantity : {{data.materialQuantity}}
+            </div>
+            <div class="col-xs-6 font-size-vary-grn text-align-right p-t-10 p-b-10">
+              Delivered Quantity : {{data.deliveredQty}}
+            </div>
+          </div>
+        </mat-expansion-panel>
+      </mat-accordion>
+      <div class="p-1"></div>
+    </ng-container>
+  </div>
 
   <div mat-dialog-actions>
     <div class="col-sm-12 save-btn-add-edit-user-modal">
