my-material-tab-changes

--- a/src/app/shared/dialogs/add-my-material-Bom/add-my-material-bom.component.html
+++ b/src/app/shared/dialogs/add-my-material-Bom/add-my-material-bom.component.html
@@ -73,9 +73,9 @@
                     <input
                       class="p-l-10 p-b-5"
                       matInput
-                      type="text"
+                      type="search"
                       placeholder="Search Category"
-                      [ngModel]="searchCategory"
+                      [(ngModel)]="searchCategory"
                       [ngModelOptions]="{standalone: true}"
                       (keydown)="$event.stopPropagation()"
                     />
