--- a/src/app/features/indent/single-indent-details/single-indent-details.component.html
+++ b/src/app/features/indent/single-indent-details/single-indent-details.component.html
@@ -24,7 +24,11 @@
         <!-- Name Column -->
         <ng-container matColumnDef="Material Name">
           <th mat-header-cell *matHeaderCellDef>Material Name</th>
-          <td mat-cell *matCellDef="let element">{{ element.materialName }}</td>
+          <td mat-cell *matCellDef="let element" matTooltip="{{ element.materialName }}">
+            <div class="limited-character global">
+              {{ element.materialName }}
+            </div>
+          </td>
         </ng-container>
 
         <!-- REquested Quantity Column -->
