--- a/src/app/features/po/view-grn/view-grn.component.html
+++ b/src/app/features/po/view-grn/view-grn.component.html
@@ -51,7 +51,7 @@
               <table mat-table [dataSource]="getData(grnHeader.poMaterialList)">
                 <ng-container matColumnDef="Material Name">
                   <th mat-header-cell *matHeaderCellDef>Material Name</th>
-                  <td mat-cell *matCellDef="let element" class="grn-material-name">
+                  <td mat-cell *matCellDef="let element" class="grn-material-name" matTooltip="{{ element.materialName }}">
                     <div class="limited-character global">
                       {{ element.materialName }}
                     </div>
