Texts Changed Signed-off-by: subham.saha@buildsupply.com <subham.saha@buildsupply.com>

--- a/src/app/shared/dialogs/add-rfq-confirmation/add-rfq-double-confirmation-component.html
+++ b/src/app/shared/dialogs/add-rfq-confirmation/add-rfq-double-confirmation-component.html
@@ -7,7 +7,7 @@
 <br />
 
 <div class="text-center">
-  Do you want to float RFQ?
+  Do you want to float the RFQ?
 </div>
 
 <div mat-dialog-actions>
