Add Material Button Fixed Signed-off-by: subham.saha@buildsupply.com <subham.saha@buildsupply.com>

--- a/src/app/shared/dialogs/add-my-material-Bom/add-my-material-bom.component.html
+++ b/src/app/shared/dialogs/add-my-material-Bom/add-my-material-bom.component.html
@@ -124,7 +124,7 @@
       </div>
 
       <div class="text-right col-xs-12 mt-4">
-        <button class="btn btn-warning next-btn" [disabled]="!addMyMaterial.valid">Send For Approval</button>
+        <button class="btn btn-warning next-btn" [disabled]="!addMyMaterial.valid">Add Material</button>
       </div>
     </form>
   </div>
