Supplier Screen Responsive Signed-off-by: subham.saha@buildsupply.com <subham.saha@buildsupply.com>

--- a/src/assets/scss/pages/po.component.scss
+++ b/src/assets/scss/pages/po.component.scss
@@ -254,6 +254,19 @@ s .validTill {
     }
   }
   }
+
+  .add-supplier-container{
+    .mat-cell,
+   .mat-header-cell {
+     font-size: 12px;
+   }
+   .project-user-details-width{
+     button{
+       font-size: 12px;
+   }
+ }
+ }
+
   .po-number-grn{
     font-size: 14px;
   }
