--- a/src/app/features/supplier/supplier-details/supplier-details.component.html
+++ b/src/app/features/supplier/supplier-details/supplier-details.component.html
@@ -39,7 +39,7 @@
 
   <ng-container *ngIf="dataSourceTemp && dataSourceTemp.length>0">
    
-    <div class="row" class="p-l-20 p-r-20 p-b-20 min-height parent">
+    <div class="row" class="suppliers-dashboard min-height parent">
       <!-- <div class="text-right add-user-details-button-right">
           <button mat-raised-button (click)="addSupplier()"
             class="main-background-color main-button color-white">
@@ -47,7 +47,7 @@
           </button>
         </div> -->
  <div class="row">
-      <div class="col-xs-3">
+      <div [ngClass]="!showResponsiveDesign ? 'col-xs-6 col-md-3' : 'col-xs-12'" *ngIf="!showResponsiveDesign">
         <mat-form-field class="example-form-field border-input p-l-20">
           <input matInput placeholder="Search Suppliers" type="search" (keyup)="applyFilter($event.target.value)" />
           <button mat-button matSuffix mat-icon-button>
@@ -55,39 +55,52 @@
           </button>
         </mat-form-field>
       </div>
-      <div class="col-xs-9">
-         
-
-        <div class="text-right add-user-details-button-right p-t-10 p-r-20">
+      <div  [ngClass]="!showResponsiveDesign ? 'col-xs-6 col-md-9' : 'col-xs-12'" >
+        <div [ngClass]="showResponsiveDesignIcons ? 'text-right add-user-details-button-right p-t-10' : 'text-right add-user-details-button-right p-t-10 p-r-20'">
           <div class="text-right d-flex justify-content-end" appDnd>
             <div class="mr-3 p-t-10">
               <span  class="cursor-pointer">
-                <img src="assets/images/download.png" alt="download" class="img-fluid mr-2 cursor-pointer ">
-                <a class="cursor-pointer"(click)="downloadExcel('assets/images/Supplier_Upload_Template.xlsx')"> Download Supplier Template</a></span>
+                <img *ngIf="!showResponsiveDesignIcons" src="assets/images/download.png" alt="download" class="img-fluid mr-2 cursor-pointer " (click)="downloadExcel('assets/images/Supplier_Upload_Template.xlsx')">
+                <img *ngIf="showResponsiveDesignIcons" src="assets/images/excel-download-res.svg" alt="download" class="img-fluid mr-2 cursor-pointer " (click)="downloadExcel('assets/images/Supplier_Upload_Template.xlsx')">
+
+                <a class="cursor-pointer" *ngIf="!showResponsiveDesignIcons" (click)="downloadExcel('assets/images/Supplier_Upload_Template.xlsx')">
+                    Download Supplier Template
+                </a></span>
             </div>
             <div  class="mr-3 p-t-10 cursor-pointer">
               <input type="file" accept=".xlsx" #fileDropRef id="fileDropRef" class="fileupload cursor-pointer" style="display: none;" multiple
                 (change)="uploadExcel($event.target.files)" />
-              <label for="fileDropRef" class="cursor-pointer upload-template"> <img src="assets/images/upload.png" alt="upload" class="img-fluid mr-2 w-30 cursor-pointer"> Upload Supplier Template</label>
+              <label for="fileDropRef" class="cursor-pointer upload-template"> 
+                <img *ngIf="!showResponsiveDesignIcons" src="assets/images/upload.png" alt="upload" class="img-fluid mr-2 w-30 cursor-pointer"> 
+                <img *ngIf="showResponsiveDesignIcons" src="assets/images/upload-res.svg" alt="upload" class="img-fluid mr-2 w-30 cursor-pointer"> 
+                <span *ngIf="!showResponsiveDesignIcons">
+                  Upload Supplier Template
+                </span> 
+                </label>
             </div>
               <button mat-raised-button (click)="addSupplier()" class="main-background-color main-button color-white add-supplier-button">
                 Add Supplier
               </button>
           </div>
-
-         
         </div>
+      </div>
+      <div class="col-xs-7" *ngIf="showResponsiveDesign">
+        <mat-form-field class="example-form-field border-input">
+          <input matInput placeholder="Search Suppliers" type="search" (keyup)="applyFilter($event.target.value)" />
+          <button mat-button matSuffix mat-icon-button>
+            <mat-icon>search</mat-icon>
+          </button>
+        </mat-form-field>
       </div>
     </div>
 
 
 
       <!-- first table structure -->
-      <div class="row">
         <!-- <div class="col-sm-12"> -->
         <!-- table structure -->
-        <div class="supplier-details-table-div" *ngIf="dataSourceTemp && dataSourceTemp.length>0">
-          <table mat-table [dataSource]="dataSource" class="mat-elevation-z8 col-sm-12">
+        <div class="supplier-details-table-div add-supplier-container mat-elevation-z8 " *ngIf="dataSourceTemp && dataSourceTemp.length>0">
+          <table mat-table [dataSource]="dataSource" >
             <!--- Note that these columns can be defined in any order.
                     The actual rendered columns are set as a property on the row definition" -->
 
@@ -151,8 +164,6 @@
         </div>
         <!-- end structure -->
         <!-- </div> -->
-      </div>
-
     </div>
   </ng-container>
 
