--- a/src/app/features/indent/indent-detail/indent-detail.component.html
+++ b/src/app/features/indent/indent-detail/indent-detail.component.html
@@ -1,7 +1,7 @@
 <div class="page-start-point">
-  <div class="row" class="p-l-20 p-r-20 p-b-20 min-height parent">
+  <div class="suppliers-dashboard p-b-20 min-height parent">
     <div class="row">
-      <div class="col-sm-12">
+      <div class="col-sm-12 p-l-10 p-r-10">
         <card-layout *ngIf="product" (onEdit)="editProject()" (onDelete)="deleteProject()" [projectDetails]="product" [disableEditDelete]="true"></card-layout>
       </div>
     </div>
@@ -15,10 +15,10 @@
             </div>
           </div>
         </mat-expansion-panel-header>
-        <div class="row padding-8 ongoing-indent-tbl">
+        <div class="add-supplier-container mat-elevation-z8">
           <!-- <div class="col-sm-12"> -->
           <!-- table structure -->
-          <table mat-table [dataSource]="dataSource1" class="mat-elevation-z8 col-sm-12">
+          <table mat-table [dataSource]="dataSource1">
             <!--- Note that these columns can be defined in any order.
                       The actual rendered columns are set as a property on the row definition" -->
 
@@ -94,10 +94,10 @@
           </div>
         </mat-expansion-panel-header>
         <!-- first table structure -->
-        <div class="row padding-8 completed-indent-tbl">
+        <div class="add-supplier-container mat-elevation-z8">
           <!-- <div class="col-sm-12"> -->
           <!-- table structure -->
-          <table mat-table [dataSource]="dataSource2" class="mat-elevation-z8 col-sm-12">
+          <table mat-table [dataSource]="dataSource2" >
             <!--- Note that these columns can be defined in any order.
                           The actual rendered columns are set as a property on the row definition" -->
 
