--- a/src/assets/scss/pages/dashboard.scss
+++ b/src/assets/scss/pages/dashboard.scss
@@ -395,7 +395,7 @@ body,
           padding-left: 20px;
           padding-right: 20px;
           }
-          .suppliers-dashboard{
+          .dashboard-unique{
             padding-left: 20px;
             padding-right: 20px;
             .example-form-field{
@@ -448,7 +448,7 @@ body,
              padding-left: 7px;
           padding-right: 7px;
         }
-        .suppliers-dashboard{
+        .dashboard-unique{
             padding-left: 7px;
          padding-right: 7px;
 
