--- a/src/assets/scss/pages/po.component.scss
+++ b/src/assets/scss/pages/po.component.scss
@@ -255,7 +255,7 @@ s .validTill {
   }
   }
 
-  .add-supplier-container{
+  .add-unique-container{
     .mat-cell,
    .mat-header-cell {
      font-size: 12px;
