--- a/src/app/features/indent/indent-detail/indent-detail.component.html
+++ b/src/app/features/indent/indent-detail/indent-detail.component.html
@@ -1,5 +1,5 @@
 <div class="page-start-point">
-  <div class="suppliers-dashboard p-b-20 min-height parent">
+  <div class="dashboard-unique p-b-20 min-height parent">
     <div class="row">
       <div class="col-sm-12 p-l-10 p-r-10">
         <card-layout *ngIf="product" (onEdit)="editProject()" (onDelete)="deleteProject()" [projectDetails]="product" [disableEditDelete]="true"></card-layout>
@@ -15,7 +15,7 @@
             </div>
           </div>
         </mat-expansion-panel-header>
-        <div class="add-supplier-container mat-elevation-z8">
+        <div class="add-unique-container mat-elevation-z8">
           <!-- <div class="col-sm-12"> -->
           <!-- table structure -->
           <table mat-table [dataSource]="dataSource1">
@@ -94,7 +94,7 @@
           </div>
         </mat-expansion-panel-header>
         <!-- first table structure -->
-        <div class="add-supplier-container mat-elevation-z8">
+        <div class="add-unique-container mat-elevation-z8">
           <!-- <div class="col-sm-12"> -->
           <!-- table structure -->
           <table mat-table [dataSource]="dataSource2" >
