--- a/src/app/shared/components/upload/upload.component.html
+++ b/src/app/shared/components/upload/upload.component.html
@@ -1,7 +1,7 @@
 <!-- new structure -->
 <div class="row" *ngIf="!userInfo">
   <div class="col-xs-12 upload-document-label" *ngIf="!userInfo">
-    <label for="upload-document">
+    <label for="upload-document" *ngIf="!grnResponsive">
       Upload Document
     </label>
   </div>
@@ -14,11 +14,21 @@
   </div> -->
 
   <!-- Will invisible in case of Update User Info -->
-  <div class="col-xs-12 grey-dotted-border p-t-40" appDnd>
+  <div class="col-xs-12 grey-dotted-border p-t-40" *ngIf="!grnResponsive" appDnd>
     <div class="upload-green-tick">
       <img src="../../../../assets/images/upload-green-arrow.png" />
     </div>
     <input accept=".pdf, .doc, .docx, .jpg, .jpeg, .png " type="file" #fileDropRef id="fileDropRef" class="drag-and-drop" title="" multiple (change)="uploadFiles($event.target.files)" />
     <span>Drag and drop or <span for="fileDropRef" class="main-color">Browse</span> files to upload</span>
+  </div>
+
+  <div class="col-xs-12 display-flex p-t-10" *ngIf="grnResponsive">
+   <button type="button" class="main-background-color main-button color-white" mat-icon-button>
+    <input accept=".pdf, .doc, .docx, .jpg, .jpeg, .png " type="file" #fileDropRef id="fileDropRef" class="drag-and-drop" title="" multiple (change)="uploadFiles($event.target.files)" />
+     <div style="margin-top: -2px;">
+       Upload
+     </div>
+   </button>
+    <span class="font-size-vary-grn p-t-10 p-l-5">maximum 4 documents are allowed</span>
   </div>
 </div>
