documents Implemented For GRN Screen Signed-off-by: subham.saha@buildsupply.com <subham.saha@buildsupply.com>

--- a/src/assets/scss/base/variables.scss
+++ b/src/assets/scss/base/variables.scss
@@ -327,6 +327,9 @@ a:hover {
 .color-6d6a6a{
   color:#6d6a6a !important;
 }
+.text-decoration-underline{
+  text-decoration: underline;
+}
 .padd-box-none{
   padding : 0 !important;
   box-shadow: none !important;
@@ -474,7 +477,9 @@ a:hover {
 .width96Percent {
   width: 96%;
 }
-
+.width94Percent{
+  width: 94%;
+}
 .width98Percent {
   width: 98%;
 }
