--- a/src/app/features/po/view-grn/view-grn.component.html
+++ b/src/app/features/po/view-grn/view-grn.component.html
@@ -23,13 +23,17 @@
       <ng-container *ngFor="let grnHeader of grnHeaders">
         <br />
         <mat-accordion>
-          <mat-expansion-panel class="myPanel" [expanded]="true">
+          <mat-expansion-panel class="myPanel" #mep="matExpansionPanel" [expanded]="true">
             <mat-expansion-panel-header>
               <mat-panel-title>
                 <div class="row width100Percent">
-                  <div class="col-xs-6 col-md-4">GRN - {{ grnHeader.grnId }}</div>
-                  <div class="col-xs-6 col-md-4">
+                  <div class="col-xs-4 col-md-4 col-lg-4 font-size-vary-grn">GRN - {{ grnHeader.grnId }}</div>
+                  <div class="col-xs-4 col-md-4 col-lg-4 font-size-vary-grn">
                     {{ grnHeader.grnDate | date: "dd-MMM-yyy" }}
+                  </div>
+                  <div *ngIf="grnHeader && grnHeader.documentList" class="col-xs-4 col-md-4 col-lg-4 display-flex justify-content-flex-end p-0" (click)="openDocuments(grnHeader.documentList);mep.expanded = false">
+                    <img class="file-icon" src="../../../../assets/images/file-doc.png" />
+                    <span class="font-size-vary-grn main-color text-decoration-underline">Documents</span>
                   </div>
                   <!-- <div class="col-md-4">
                                             <div class="pull-right p-l-10 p-r-10">
