--- a/src/app/shared/dialogs/add-edit-grn/grn-documents.component.html
+++ b/src/app/shared/dialogs/add-edit-grn/grn-documents.component.html
@@ -1,6 +1,6 @@
 <div [ngClass]="showResponsive ? 'row p-t-15' : 'row p-t-15 grn-responsive-file-list'">
   <mat-card [ngClass]="showResponsive ? 'display-flex-important width98Percent margin-0-auto' : 'width98Percent margin-0-auto padd-box-none'">
-    <mat-card-header class="upload-documents-mat-header col-sm-12 col-md-6">
+    <mat-card-header class="upload-documents-mat-header col-xs-12 col-sm-6 col-md-6">
       <span class="text-semi-bold width100Percent">
         <app-upload #uploadRef [documentListLength]="documentListLength" [grnResponsive]="!showResponsive" [filesRemoved]="filesRemoved" (onFileUpdate)="fileUpdate($event)"> </app-upload>
       </span>
@@ -8,7 +8,7 @@
         View Document
       </span> -->
     </mat-card-header>
-    <mat-card-content class="col-sm-12 col-md-6">
+    <mat-card-content class="col-xs-12 col-sm-6 col-md-6">
       <mat-list class="pt-10">
         <span *ngIf="documentData">
           <mat-list-item class="files-list" *ngFor="let file of documentData; let i = index">
@@ -25,13 +25,7 @@
            
           </mat-list-item>
         </span>
-        <span *ngIf="!documentData">
-          <mat-list-item *ngIf="showResponsive">
-            <div class="col-xs-12 font-size-vary-grn text-align-center color-#989898">
-              maximum 4 documents are allowed
-            </div>
-          </mat-list-item>
-        </span>
+      
         <span *ngIf="documentList.length > 0">
           <div *ngIf="showResponsive" class="font-size16 p-l-15 color-6d6a6a"> Uploaded Documents </div>
           <div class="grn-responsive-file-list-down">
@@ -52,6 +46,13 @@
             </mat-list-item>
           </div>
         </span>
+
+        <span *ngIf="!documentData">
+            <div *ngIf="showResponsive" class="col-xs-12 font-size-vary-grn text-align-center color-#989898">
+              maximum 4 documents are allowed
+            </div>
+        </span>
+        
       </mat-list>
     </mat-card-content>
   </mat-card>
