--- a/src/assets/scss/pages/supplier.scss
+++ b/src/assets/scss/pages/supplier.scss
@@ -303,13 +303,16 @@ body {
   font-size : 12px;
 }
 .grn-responsive-file-list-down{
-  max-height: 75px;
+  max-height: 125px;
   overflow-y: auto;
 }
 @media only screen and (max-height: 450px){
   .add-grn-responsive-div{
     max-height: 175px;
     overflow-y: auto;
+  }
+  .save-btn-add-edit-user-modal{
+    padding: 0;
   }
   .grn-responsive-file-list{
     max-height: 75px;
@@ -784,6 +787,11 @@ mat-icon {
     min-width: 95%;
     white-space: pre-line;
   }
+  .grn-responsive-file-list-down{
+    max-height: 75px;
+    overflow-y: auto;
+  }
+
   .header-project-menu .main-div-bell.mat-menu-item {
     max-height: 250px;
   }
