--- a/src/app/shared/dialogs/add-edit-user/add-edit-user-component.html
+++ b/src/app/shared/dialogs/add-edit-user/add-edit-user-component.html
@@ -7,10 +7,9 @@
       </button>
   </div>
       <!-- new structure -->
-      <div class="col-sm-12">
         <!-- first row -->
         <div class="row">
-          <div class="col-sm-12">
+          <div class="col-xs-12 col-sm-12">
             <!-- project Name -->
           <mat-form-field class="border-input add-edit-user-form-modal">
           <input
@@ -25,7 +24,7 @@
         </div>
         <!-- second row -->
         <div class="row">
-          <div class="col-sm-12">
+          <div class="col-xs-12 col-sm-12">
             
         <mat-form-field class="border-input add-edit-user-form-modal">
           <input
@@ -41,7 +40,7 @@
         </div>
         <!-- third row -->
         <div class="row">
-          <div class="col-sm-12">
+          <div class="col-xs-12 col-sm-12">
             <!-- address 1 -->
        <mat-form-field class="border-input add-edit-user-form-modal">
           <input
@@ -63,7 +62,7 @@
         </div>
         <!-- fourth row -->
          <div class="row">
-          <div class="col-sm-12">
+          <div class="col-xs-12 col-sm-12">
            <!-- PinCode -->
         <mat-form-field class="border-input add-edit-user-form-modal">
           <input
@@ -81,7 +80,7 @@
 
         <!-- fifth row -->
         <div class="row">
-          <div class="col-sm-12">
+          <div class="col-xs-12 col-sm-12">
            <!-- city -->
             <mat-form-field class="border-select add-edit-user-form-modal">
               <mat-label>Role *</mat-label>
@@ -96,7 +95,7 @@
 
          <!-- sixth row -->
          <div class="row">
-          <div class="col-sm-12">
+          <div class="col-xs-12 col-sm-12">
            <!-- project unit -->
         <!-- <mat-form-field class="border-select add-edit-user-form-modal">
           <mat-label>Project</mat-label>
@@ -120,11 +119,11 @@
           </div>
 
         </div>
-      </div>
+     
       <!-- end structure -->
     
   <div mat-dialog-actions>
-    <div class="col-sm-12 save-btn-add-edit-user-modal">
+    <div class="col-xs-12 col-sm-12 save-btn-add-edit-user-modal">
       <button
         mat-raised-button [disabled]="!form.valid || !emailVerified" (click)="userDetailsNavigate()"
         class="main-background-color main-button color-white pull-right"
