--- a/src/app/features/rfq/ref-detail/ref-detail.component.html
+++ b/src/app/features/rfq/ref-detail/ref-detail.component.html
@@ -17,7 +17,7 @@
     </div>
   </div>
 
-  <div class="p-l-20 p-r-20 p-b-20 min-height parent" *ngIf="submittedRfqListTemp || nonSubmittedRfqListTemp">
+  <div class="dashboard-unique p-b-20 min-height parent" *ngIf="submittedRfqListTemp || nonSubmittedRfqListTemp">
     <div class="row">
       <div class="col-xs-12">
         <!-- <mat-card>
@@ -73,8 +73,8 @@
             </mat-panel-title>
           </mat-expansion-panel-header>
 
-          <div class="row">
-            <table mat-table [dataSource]="submittedRfqList" class="mat-elevation-z8 col-sm-12">
+          <div class="add-unique-container mat-elevation-z8">
+            <table mat-table [dataSource]="submittedRfqList">
               <ng-container matColumnDef="RFQ Name">
                 <th mat-header-cell *matHeaderCellDef>RFQ Name</th>
                 <td mat-cell *matCellDef="let element">{{ element.rfqName }}</td>
@@ -162,8 +162,8 @@
             </mat-panel-title>
           </mat-expansion-panel-header>
 
-          <div class="row">
-            <table mat-table [dataSource]="nonSubmittedRfqList" class="mat-elevation-z8 col-sm-12">
+          <div class="add-unique-container mat-elevation-z8">
+            <table mat-table [dataSource]="nonSubmittedRfqList">
               <ng-container matColumnDef="RFQ Name">
                 <th mat-header-cell *matHeaderCellDef>RFQ Name</th>
                 <td mat-cell *matCellDef="let element">{{ element.rfqName }}</td>
