background set to White Signed-off-by: subham.saha@buildsupply.com <subham.saha@buildsupply.com>

--- a/src/assets/scss/pages/common.scss
+++ b/src/assets/scss/pages/common.scss
@@ -100,7 +100,7 @@ div.limited-character.universal {
   font-size: 0.9em;
   margin: 0;
   padding: 0px 0px 0px 17px !important;
-  //background-color: #ffffff;
+  background-color: #ffffff;
   span {
    color: #565655;
     outline: none;
