BUg FIxes Signed-off-by: subham.saha@buildsupply.com <subham.saha@buildsupply.com>

--- a/src/app/features/indent/indent-dashboard.component.html
+++ b/src/app/features/indent/indent-dashboard.component.html
@@ -15,7 +15,7 @@
     </div>
     <!-- first table structure -->
     <form [formGroup]="materialForms">
-      <div formArrayName="forms" class="add-unique-container mat-elevation-z8" *ngIf="subcategory">
+      <div formArrayName="forms" class="add-unique-container raise-indent-table mat-elevation-z8" *ngIf="subcategory">
         <!-- <div class="col-sm-12"> -->
         <!-- table structure -->
         <table mat-table [dataSource]="subcategory">
