--- a/src/app/features/po/po-detail-list/po-detail-list.component.html
+++ b/src/app/features/po/po-detail-list/po-detail-list.component.html
@@ -30,7 +30,7 @@
           </button>
         </mat-form-field>
       </div>
-      <div class="text-right col-xs-5 create-po-btn p-r-20">
+      <div class="text-right col-xs-5 create-po-btn p-r-20 p-t-10">
         <button
           mat-raised-button
           class="main-background-color main-button color-white demo-title"
