--- a/src/app/shared/components/upload/upload.component.html
+++ b/src/app/shared/components/upload/upload.component.html
@@ -29,6 +29,6 @@
        Upload
      </div>
    </button>
-    <span class="font-size-vary-grn p-t-10 p-l-5">maximum 4 documents are allowed</span>
+    <span class="font-size-vary-grn p-t-10 p-l-5">*maximum 4 documents are allowed</span>
   </div>
 </div>
