--- a/src/app/shared/dialogs/add-edit-grn/grn-documents/grn-documents.component.html
+++ b/src/app/shared/dialogs/add-edit-grn/grn-documents/grn-documents.component.html
@@ -49,7 +49,7 @@
 
         <span *ngIf="!documentData">
             <div *ngIf="showResponsive" class="col-xs-12 font-size-vary-grn text-align-center color-#989898">
-              maximum 4 documents are allowed
+              *maximum 4 documents are allowed
             </div>
         </span>
         
