--- a/src/app/features/dashboard/dashboard.component.html
+++ b/src/app/features/dashboard/dashboard.component.html
@@ -23,7 +23,7 @@
   </div>
   <div *ngIf="allProjects && allProjects.length > 0" class="project-dashboard p-b-20 min-height parent">
     <!-- fix part -->
-    <div class="row p-t-15 p-b-10">
+    <div class="row">
       <div class="col-xs-7">
         <mat-form-field class="example-form-field border-input project">
           <input matInput placeholder="Search Projects" type="search" [(ngModel)]="searchText" />
@@ -32,7 +32,7 @@
           </button>
         </mat-form-field>
       </div>
-      <div class="text-right col-xs-5 add-project-btn">
+      <div class="text-right col-xs-5 add-project-btn p-t-10">
         <button mat-raised-button class="main-background-color main-button color-white demo-title" (click)="addProject()">
           + Add Project
         </button>
