breadcrumbs hidden Signed-off-by: subham.saha@buildsupply.com <subham.saha@buildsupply.com>

--- a/src/app/features/po/po-detail-list/po-detail-list.component.html
+++ b/src/app/features/po/po-detail-list/po-detail-list.component.html
@@ -20,7 +20,7 @@
       </div>
     </div>
   </div>
-  <div class="p-b-20 p-t-10 min-height parent create-po-dashboard" *ngIf="poApprovalDetailsTemp || poDraftedDetailsTemp || acceptedRejectedPOListTemp">
+  <div class="p-b-20 min-height parent create-po-dashboard" *ngIf="poApprovalDetailsTemp || poDraftedDetailsTemp || acceptedRejectedPOListTemp">
     <div class="row">
       <div class="col-xs-7">
         <mat-form-field class="example-form-field border-input project p-l-10">
