--- a/src/app/shared/header/header.html
+++ b/src/app/shared/header/header.html
@@ -12,8 +12,8 @@
         </a>
       </ng-container>
     </div>
-    <!-- <div class="col-sm-12 p-t-0 p-b-0 p-l-0 p-r-0">
+    <div class="col-sm-12 p-t-0 p-b-0 p-l-0 p-r-0">
       <app-breadcrumb></app-breadcrumb>
-    </div> -->
+    </div>
   </div>
 </div>
